# vca-tool

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vca_tool/: config.py  vcamulti.py  vcapp.py
