[build-system]
requires = ["flit_core >=3.4,<4", "setuptools"]
build-backend = "flit_core.buildapi"

[project]
name="vca-tool"
version="0.1.0"
description="A tool for making virtual crystal approximation pseudo-potentials on Quantum Espresso"
authors=[{name='Yuta Yahagi', email='yuta-yahagi@nec.com'}]
license={file = 'LICENSE.txt'}
requires-python=">=3.6"
readme="README.md"
dependencies = [
"click"
]

[project.urls]

[project.scripts]
"vca-tool" = "vca_tool.vcapp:main"